--- a/force-app/main/default/lwc/numerator/numerator.html
+++ b/force-app/main/default/lwc/numerator/numerator.html
@@ -5,5 +5,11 @@
       <lightning-formatted-number value={counter}></lightning-formatted-number>
     </p>
     <!-- controls go here -->
+    <c-controls
+      class="slds-show slds-is-relative"
+      onadd={handleIncrement}
+      onsubtract={handleDecrement}
+    >
+    </c-controls>
   </lightning-card>
 </template>
