--- a/force-app/main/default/lwc/numerator/numerator.html
+++ b/force-app/main/default/lwc/numerator/numerator.html
@@ -9,6 +9,7 @@
       class="slds-show slds-is-relative"
       onadd={handleIncrement}
       onsubtract={handleDecrement}
+      onmultiply={handleMultiply}
     >
     </c-controls>
   </lightning-card>
