--- a/force-app/main/default/lwc/controls/controls.html
+++ b/force-app/main/default/lwc/controls/controls.html
@@ -11,7 +11,7 @@
       </lightning-layout-item>
       <lightning-layout-item flexibility="auto" padding="around-small">
         <!-- buttons go here -->
-        <lightning-button
+        <!-- <lightning-button
           label="2"
           data-factor="2"
           icon-name="utility:close"
@@ -24,7 +24,22 @@
           icon-name="utility:close"
           onclick={handleMultiply}
         >
-        </lightning-button>
+        </lightning-button> -->
+        <lightning-layout-item
+          flexibility="auto"
+          padding="around-small"
+          onbuttonclick={handleMultiply}
+        >
+          <template for:each={factors} for:item="factor">
+            <c-button
+              key={factor}
+              label={factor}
+              data-factor={factor}
+              icon="utility:close"
+            >
+            </c-button>
+          </template>
+        </lightning-layout-item>
       </lightning-layout-item>
       <lightning-layout-item flexibility="auto" padding="around-small">
         <lightning-button
