--- a/force-app/main/default/lwc/numerator/numerator.html
+++ b/force-app/main/default/lwc/numerator/numerator.html
@@ -1,5 +1,13 @@
 <template>
   <lightning-card title="Numerator" icon-name="action:manage_perm_sets">
+    <!-- prior count -->
+    <p class="slds-text-align_center slds-var-m-vertical_medium">
+      Prior Count:
+      <lightning-formatted-number
+        value={priorCount}
+      ></lightning-formatted-number>
+    </p>
+    <!-- current count -->
     <p class="slds-text-align_center slds-var-m-vertical_medium">
       Count:
       <lightning-formatted-number value={counter}></lightning-formatted-number>
